[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/music/[ONTIVA.COM] Opposition - 'Ultralight'-HQ.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/fonts/3X5_____.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Screens/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/backgrounds/catgirl_background.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/Open 24 Display St.ttf"

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="CatgirlBackground" type="Sprite" parent="."]
position = Vector2( 693, 360 )
scale = Vector2( 0.365839, 0.400286 )
texture = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 42.0
margin_top = 153.0
margin_right = 452.0
margin_bottom = 220.0
theme = SubResource( 2 )
text = "Nyan Jam 2022"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 163.0
margin_top = 295.0
margin_right = 290.0
margin_bottom = 433.0
rect_scale = Vector2( 1.44785, 1.15604 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
margin_right = 127.0
margin_bottom = 67.0
theme = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 71.0
margin_right = 127.0
margin_bottom = 138.0
theme = SubResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="Control"]
visible = true
margin_right = 300.0
margin_bottom = 100.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control/PopupDialog"]
margin_left = 5.0
margin_top = 25.0
margin_right = 5.0
margin_bottom = 10.0
rect_scale = Vector2( 1.00796, 0.995985 )

[node name="VSplitContainer" type="VSplitContainer" parent="Control/PopupDialog/CenterContainer"]
margin_right = 580.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="Control/PopupDialog/CenterContainer/VSplitContainer"]
margin_right = 580.0
margin_bottom = 150.0
text = "Hi guys! This is a small little game jam session I had experimenting 
with RNG and rhythm games. I've never made one of these before 
so figuring out the mechanics was fun! A lot of this was slapped together 
very sloppily due to time constraints (this challenge was technically executed in 36 hours).

Maybe next year we can do it as a group? :D

I hope you enjoy!
- Matt"

[node name="Button" type="Button" parent="Control/PopupDialog/CenterContainer/VSplitContainer"]
margin_top = 162.0
margin_right = 580.0
margin_bottom = 182.0
text = "Let's goo!!"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
autoplay = true

[connection signal="pressed" from="Control/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Control/PopupDialog/CenterContainer/VSplitContainer/Button" to="." method="_on_Button_pressed"]
